--- a/package.json
+++ b/package.json
@@ -18,35 +18,23 @@
   "bugs": "",
   "keywords": [],
   "author": {
-    "name": "",
-    "email": "",
-    "url": ""
+    "name": "Li Zhe",
+    "email": "zhea55@gmail.com",
+    "url": "https://github.com/zhea55"
   },
   "contributors": [],
   "scripts": {
-    "dev": "node ./config/dev.js -w",
-    "build": "./config/build.js && npx esbuild library/opencv.js --minify --outdir=dist/js",
-    "copy": "npx copy-files-from-to",
-    "rome:format": "npx rome format ."
+    "start": "node app.js",
+    "rome:format": "npx rome format .",
+    "buildopencv": "npm link && npx build-opencv --version 4.6.0 rebuild"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0",
-    "copy-files-from-to": "^3.6.0",
-    "esbuild": "^0.16.6",
-    "esbuild-serve": "^1.0.1",
     "rome": "^0.10.1"
   },
-  "copyFiles": [
-    {
-      "from": "template/index.html",
-      "to": "dist/index.html"
-    },
-    {
-      "from": "assets/*",
-      "to": "dist/assets/"
-    }
-  ],
-  "copyFilesSettings": {
-    "whenFileExists": "overwrite"
+  "opencv4nodejs": {
+    "autoBuildOpencvVersion": "4.6.0"
+  },
+  "dependencies": {
+    "@u4/opencv4nodejs": "^6.2.5"
   }
 }
