--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
   "contributors": [],
   "scripts": {
     "start": "node app.js",
-    "rome:format": "npx rome format .",
-    "postinstall": "npx build-opencv --version 4.6.0 build"
+    "rome:format": "npx rome format ."
   },
   "devDependencies": {
     "rome": "^11.0.0"
   },
   "opencv4nodejs": {
-    "autoBuildOpencvVersion": "4.6.0"
+    "disableAutoBuild": "1"
   },
   "dependencies": {
     "@u4/opencv4nodejs": "^6.2.5"
